Prevent default on touch start to (hopefully) remove tap highlight on ios

--- a/style/main.css
+++ b/style/main.css
@@ -10,7 +10,6 @@ body, canvas {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 #canvas {
